# codediff.nvim

./: .clangd  .gitignore  .luarc.json  .stylua.toml  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_NOTES.md  Makefile  Makefile.win  README.md  TESTING.md  UNIFIED_DIFF_MODE.md  nmakefile  test_unified_manual.sh  vscode-wrap-alignment.mjs
.github/agents/: codediff-developer.agent.md
.github/instructions/: build.instructions.md
.github/workflows/: build-and-test.yml  pr.yml
dev-docs/: fix-empty-line-alignment.md  merge-tool-parity-gaps.md
doc/: codediff.txt
libvscode-diff/: default_lines_diff_computer.c  diff_tool.c
libvscode-diff/src/: myers.c  sequence.c
lua/codediff/: commands.lua  config.lua  init.lua  version.lua
lua/codediff/core/: diff.lua  dir.lua  git.lua  installer.lua  virtual_file.lua
lua/codediff/ui/: auto_refresh.lua  core.lua  highlights.lua  init.lua  merge_alignment.lua  semantic_tokens.lua  wrap_filler.lua
lua/codediff/ui/conflict/: actions.lua  diffget.lua  keymaps.lua  navigation.lua  signs.lua  tracking.lua
lua/codediff/ui/explorer/: actions.lua  init.lua  keymaps.lua  nodes.lua  quickfix.lua  refresh.lua  render.lua  tree.lua
lua/codediff/ui/history/: init.lua  nodes.lua  quickfix.lua  render.lua
lua/codediff/ui/lifecycle/: accessors.lua  cleanup.lua  init.lua  session.lua  state.lua
lua/codediff/ui/unified/: init.lua  keymaps.lua  render.lua  view.lua
lua/codediff/ui/view/: conflict_window.lua  helpers.lua  init.lua  keymaps.lua  render.lua
lua/vscode-diff/: _deprecation.lua  auto_refresh.lua  commands.lua  config.lua  diff.lua  git.lua  init.lua  installer.lua  render.lua  ui.lua  version.lua  virtual_file.lua
lua/vscode-diff/render/: core.lua  explorer.lua  highlights.lua  lifecycle.lua  merge_alignment.lua  view.lua
lua/vscode-diff/ui/conflict_actions/: actions.lua  diffget.lua  init.lua  keymaps.lua  navigation.lua  signs.lua  tracking.lua
lua/vscode-diff/ui/explorer/: nodes.lua
plugin/: vscode-diff.lua
scripts/: bump_version.mjs  compare_perf.lua  merge_alignment_cli.lua  test_diff_comparison.sh  test_merge_comparison.sh
tests/: README.md  autoscroll_spec.lua  completion_spec.lua  explorer_staging_spec.lua  ffi_integration_spec.lua  full_integration_spec.lua  git_integration_spec.lua  init.lua  installer_spec.lua  integration_diagnostics_spec.lua  run_plenary_tests.sh  test_autoscroll.lua  test_wrap_alignment.sh  unified_integration_spec.lua
tests/render/: core_spec.lua  lifecycle_spec.lua  merge_alignment_spec.lua  semantic_tokens_spec.lua  unified_spec.lua  view_spec.lua  wrap_alignment_spec.lua  wrap_filler_spec.lua
