cmake_minimum_required(VERSION 3.15)

# Export compile commands for clangd
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Read version from VERSION file (single source of truth)
file(READ "${CMAKE_CURRENT_SOURCE_DIR}/VERSION" PROJECT_VERSION)
string(STRIP "${PROJECT_VERSION}" PROJECT_VERSION)

project(vscode-diff-nvim VERSION ${PROJECT_VERSION})

# This is the root CMakeLists.txt for the Neovim plugin
# It delegates C building to libvscode-diff/

# Enable testing at root level so CTest can find tests from subdirectories
enable_testing()

# Add C core subdirectory
add_subdirectory(libvscode-diff)

message(STATUS "===========================================")
message(STATUS "  vscode-diff.nvim Plugin")
message(STATUS "===========================================")
message(STATUS "  Build the plugin:")
message(STATUS "    cmake -B build")
message(STATUS "    cmake --build build")
message(STATUS "")
message(STATUS "  Run C tests:")
message(STATUS "    cmake --build build --target test")
message(STATUS "    ctest --test-dir build")
message(STATUS "")
message(STATUS "  Run Lua tests:")
message(STATUS "    ./tests/run_tests.sh")
message(STATUS "    make test-lua")
message(STATUS "===========================================")

# Generate Makefile wrappers that delegate to CMake
# This allows developers to use 'make' (Linux/macOS) or 'nmake' (Windows)
# Users without CMake can still use build.sh / build.cmd

# Generate Makefile for Unix/Linux/macOS
file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/Makefile"
"# Auto-generated by CMake - DO NOT EDIT
# Makefile wrapper for developers (uses CMake underneath)
# Users: Use build.sh instead (no CMake required)

.PHONY: all build test test-c test-lua clean help

all: build

build:
\t@cmake -B build -S .
\t@cmake --build build
\t@echo \"✓ Build successful\"

test: test-c test-lua

test-c: build
\t@cd build && ctest --output-on-failure

test-lua:
\t@./tests/run_tests.sh

clean:
\t@rm -rf build
\t@rm -f libvscode_diff.so libvscode_diff.dylib

help:
\t@echo \"Targets: build, test, test-c, test-lua, clean, help\"
")

# Generate nmakefile for Windows nmake
file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/nmakefile"
"# Auto-generated by CMake - DO NOT EDIT
# Makefile wrapper for Windows developers (uses CMake underneath)
# Users: Use build.cmd instead (no CMake required)

all: build

build:
\tcmake -B build -S .
\tcmake --build build
\t@echo Build successful

test: test-c test-lua

test-c: build
\tcd build && ctest --output-on-failure

test-lua:
\tbash tests/run_tests.sh

clean:
\tif exist build rmdir /s /q build
\tif exist libvscode_diff.dll del /q libvscode_diff.dll

help:
\t@echo Targets: build, test, test-c, test-lua, clean, help
")

message(STATUS "")
message(STATUS "Generated Makefiles:")
message(STATUS "  Makefile  - for make (Linux/macOS)")
message(STATUS "  nmakefile - for nmake (Windows)")
message(STATUS "")

